trunk/NewArchive/324ec7a56ffcfbc6de06868086ce7733-55399888f58dfaabb8162fcb47a11929/output
+ gcc-4.8 -std=c11 -O2 -Wall -pedantic -pthread main.cpp
cc1plus: warning: command line option '-std=c11' is valid for C/ObjC but not for C++ [enabled by default]
main.cpp: In function 'int main()':
main.cpp:2:5: error: 'U' was not declared in this scope
     U"foo";
     ^
main.cpp:2:6: error: expected ';' before string constant
     U"foo";
      ^
